fix(css): fix horizontal scrolling off code snippets on mobile devices

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -63,7 +63,6 @@ pre code {
   overflow-wrap: break-word;
   overflow-x: auto;
   word-break: break-word;
-  white-space: pre-wrap;
 }
 
 code {
